--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:protectionLevel="signature" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:name=".BaseClass"
         android:theme="@style/AppTheme" >
@@ -29,6 +29,11 @@
         <activity
             android:name=".BaseActivity"
             android:label="@string/app_name" >
+
+        </activity>
+
+        <activity android:name=".SpalshScreen"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
