--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="com.algorepublic.cityhistory.cityhistory.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
     <permission
         android:name="com.algorepublic.cityhistory.cityhistory.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
@@ -25,7 +28,6 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
-        <uses-library android:name="com.google.android.maps" android:required="true" />
         <activity
             android:name=".BaseActivity"
             android:label="@string/app_name" >
