--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="com.algorepublic.cityhistory.cityhistory.permission.MAPS_RECEIVE"/>
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
@@ -23,13 +24,17 @@
         <!-- Goolge Maps API Key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyB9AO6W6SSLylUsQiMq8suzcZY7OZgf7SI"/>
-            <!--android:value="AIzaSyBo8ODJmHlGhPq1U-URcDQyMO6AOd74n3Y" />-->
+            android:value="AIzaSyBo8ODJmHlGhPq1U-URcDQyMO6AOd74n3Y" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
         <activity
             android:name=".BaseActivity"
+            android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name=".LoginActivity"
             android:label="@string/app_name" >
 
         </activity>
