--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.algorepublic.cityhistory.cityhistory"
-        minSdkVersion 13
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -26,6 +26,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.parse.bolts:bolts-android:1.1.4'
     //    compile 'com.android.support:support-v13:+'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
     compile files('libs/android-query-full.0.26.7.jar')
