--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.algorepublic.cityhistory.cityhistory"
-        minSdkVersion 13
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile project(':core')
     compile project(':layouts')
+    compile 'com.parse.bolts:bolts-android:1.1.2'
 }
