--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile project(':core')
+    compile 'com.parse.bolts:bolts-android:1.2.0'
     compile project(':layouts')
 }
